adds toggles for optional sync

--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.toggle-bg:after {
+  content: '';
+  @apply absolute top-0.5 left-0.5 bg-white dark:bg-slate-400 border border-gray-300 rounded-full h-5 w-5 transition shadow-sm;
+}
+
+input:checked + .toggle-bg:after {
+  transform: translateX(100%);
+  @apply border-white dark:border-slate-400;
+}
+
+input:checked + .toggle-bg {
+  @apply bg-indigo-600 border-indigo-600;
+}
